Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.11.0-rc1
-
None
-
-
12c74e6664bc910b40de7fb96a163d511711b7b1 (qt-creator/qt-creator/4.11)
Description
In new qt creator I cannot build android apk using cmake build system. Old 4.10.0 Qt Creator works well.
Steps to reproduce:
- Just create new QML project with CMake build system
- At Kit selection step mark target for android arm64
- Build project within this target.
Result:
No target architecture defined in json file. 10:29:09: The process "/media/data/QT/5.13.1/android_arm64_v8a/bin/androiddeployqt" exited with code 2. Error while building/deploying project bug (kit: Android for arm64-v8a (Clang Qt 5.13.1 for Android ARM64-v8a)) When executing step "Build Android APK"
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-23420 Cannot build Qt <=5.13 android builds with CMake
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-23306 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
287145,2 | Handle Qt < 5.14.0 androiddeployqt settings file | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |