src/plugins/android/androidbuildapkstep.h
@@ -110,6 +110,7 @@ private:
     QString m_command;
     QString m_argumentsPasswordConcealed;
     bool m_skipBuilding = false;
+    QString m_inputFile;
 };
 
 namespace Internal {
