src/plugins/android/androidmanager.h
@@ -96,6 +96,7 @@ public:
     static int minimumSDK(const ProjectExplorer::Kit *kit);
 
     static QStringList applicationAbis(const ProjectExplorer::Target *target);
+    static QString archTriplet(const QString &abi);
 
     static Utils::FilePath dirPath(const ProjectExplorer::Target *target);
     static Utils::FilePath manifestPath(ProjectExplorer::Target *target);
@@ -127,6 +128,7 @@ public:
     static SdkToolResult runAaptCommand(const QStringList &args, int timeoutS = 30);
 
     static QJsonObject deploymentSettings(const ProjectExplorer::Target *target);
+    static bool isQtCreatorGenerated(const Utils::FilePath &deploymentFile);
 
 private:
     static SdkToolResult runCommand(const Utils::CommandLine &command,
